[gd_scene load_steps=3 format=3 uid="uid://05i8g6jnbhte"]

[ext_resource type="Script" uid="uid://dbfv7ncbraqrv" path="res://scripts/ui/config/pay_periods_tab.gd" id="1_xdxe0"]
[ext_resource type="PackedScene" uid="uid://xfdpsjaehefb" path="res://scenes/ui/config/date_picker.tscn" id="2_ktb35"]

[node name="PayPeriodsTab" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdxe0")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Pay Period Settings"
horizontal_alignment = 1

[node name="TypeSection" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/TypeSection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TypeSection/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Pay Period Type"

[node name="TypeOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/TypeSection/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
selected = 1
item_count = 4
popup/item_0/text = "Weekly"
popup/item_0/id = 0
popup/item_1/text = "Biweekly"
popup/item_1/id = 1
popup/item_2/text = "Semimonthly"
popup/item_2/id = 2
popup/item_3/text = "Monthly"
popup/item_3/id = 3

[node name="StartDaySection" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/StartDaySection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/StartDaySection/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Start Day of Week"

[node name="StartDayOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/StartDaySection/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
selected = 0
item_count = 7
popup/item_0/text = "Sunday"
popup/item_0/id = 0
popup/item_1/text = "Monday"
popup/item_1/id = 1
popup/item_2/text = "Tuesday"
popup/item_2/id = 2
popup/item_3/text = "Wednesday"
popup/item_3/id = 3
popup/item_4/text = "Thursday"
popup/item_4/id = 4
popup/item_5/text = "Friday"
popup/item_5/id = 5
popup/item_6/text = "Saturday"
popup/item_6/id = 6

[node name="HelpText" type="Label" parent="ScrollContainer/VBoxContainer/StartDaySection/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Only applies to weekly and biweekly pay periods"
autowrap_mode = 3

[node name="StartDateSection" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/StartDateSection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/StartDateSection/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "First Pay Period Start Date"

[node name="StartDatePicker" parent="ScrollContainer/VBoxContainer/StartDateSection/VBoxContainer" instance=ExtResource("2_ktb35")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="PeriodsSection" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/PeriodsSection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/PeriodsSection/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Generated Pay Periods"

[node name="PeriodsList" type="ItemList" parent="ScrollContainer/VBoxContainer/PeriodsSection/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
auto_height = true
item_count = 3
item_0/text = "Feb 16, 2025 to Mar 1, 2025 (open)"
item_1/text = "Mar 2, 2025 to Mar 15, 2025 (open)"
item_2/text = "Mar 16, 2025 to Mar 29, 2025 (open)"

[node name="ButtonsSection" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/ButtonsSection"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RegenerateButton" type="Button" parent="ScrollContainer/VBoxContainer/ButtonsSection/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "Regenerate Pay Periods"

[node name="SaveButton" type="Button" parent="ScrollContainer/VBoxContainer/ButtonsSection/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "Save Settings"
